fixtures/typescript/fallback/should_fail/nullish.tsx
export function ToolUsePanel(props: { toolUseId?: string }) {
  const toolUseId = props.toolUseId ?? "default";
  return <div>{toolUseId}</div>;
}
